2008-11-12  DJ Delorie  <dj@redhat.com>

	* config/m32c/cond.md (cond_to_int peephole2): Don't eliminate the
	insns if the intermediate value will be used later.

2008-11-12  Andreas Schwab  <schwab@suse.de>

	* config/m68k/m68k.c (print_operand): Mask off extra extension
	bits when writing out the representation of real values.

2008-11-12  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/38079
	* tree-vect-analyze.c (vect_analyze_data_refs): Replace dump_file
	with vect_dump.

2008-11-12  Jakub Jelinek  <jakub@redhat.com>

	PR c++/35334
	* c-pretty-print.c (pp_c_complex_expr): New function.
	(pp_c_postfix_expression) <case COMPLEX_EXPR>: Call it.

	PR target/35366
	* expr.c (expand_expr_addr_expr_1): If EXP needs bigger alignment
	than INNER and INNER is a constant, forcibly align INNER as much
	as needed.

2008-11-11  Richard Sandiford  <rdsandiford@googlemail.com>

	* cse.c (fold_rtx): Remove redundant gen_rtx_CONST.

2008-11-11  Richard Sandiford  <rdsandiford@googlemail.com>

	PR rtl-optimization/37363
	* simplify-rtx.c (simplify_plus_minus): Don't create (const (minus ...))
	expresisons.

2008-11-11  Eric Botcazou  <ebotcazou@adacore.com>

	* ira-lives.c (process_bb_node_lives): Restore EH_RETURN_DATA_REGNO
	handling.

2008-11-10  Catherine Moore  <clm@codesourcery.com>

	* config.gcc (mips64vrel-*-elf*): Include the tm_file
	prior to vr.h.
	* config/mips/linux.h (LINUX_DRIVER_SELF_SPECS): New.
	(BASE_DRIVER_SELF_SPECS): Remove.
	(DRIVER_SELF_SPECS): New definition.
	* config/mips/elfoabi.h: (DRIVER_SELF_SPECS): Include
	BASE_DRIVER_SELF_SPECS.
	* config/mips/sde.h: Likewise.
	* config/mips/iris6.h: Likewise.
	* config/mips/vr.h: Likewise.
	* config/mips/mips.h (BASE_DRIVER_SELF_SPECS): New. 

2008-11-10  Vladimir Makarov  <vmakarov@redhat.com>
	    
	PR rtl-optimizations/37948
	* ira-int.h (struct ira_allocno_copy): New member constraint_p.
	(ira_create_copy, ira_add_allocno_copy): New parameter.
